2003-05-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* .cvsignore: Add aclocal.m4.

	* lily/music-constructor.cc: Include <assert.h>.

2003-05-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* ly/engraver-init.ly (HaraKiriStaffContext): use
	FrenchStaffContext instead.

	* Documentation/user/refman.itely: updates

2003-05-23  Juergen Reuter  <reuter@ipd.uka.de>

	* Documentation/user/refman.itely: added solesmes neumes table;
	bugfix: make section "More Stanzas" a subsection of "Vocal Music";
	bugfix: "Ornaments" -> "Articulations"

	* ly/gregorian-init.ly: junked "aucta" and "semivocalis"

2003-05-22  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-indent.el: Add a message about trying to match \] or \).
	
2003-05-22  Juergen Reuter  <reuter@ipd.uka.de>
	* input/test/gregorian-scripts.ly, input/test/vaticana.ly: removed
	obsolete "arithmetic_*"

	* input/bugs/ligatures.ly: removed (will be put into a different
	directory later)

2003-05-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Add tetex-devel as package suggestion for
	libkpathsea (Maurizio Tomasi).

2003-05-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/repeat-slash.ly (texidoc): new file

	* lily/slash-repeat-engraver.cc (try_music): new file, handle
	slash repeats separately. Slash repeats and %
	repeats can now be nested.

2003-05-22  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-indent.el: Add preliminary test for closing \] and \).
	
2003-05-21  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/gregorian-ligature-engraver.cc,
	lily/vaticana-ligature-engraver.cc,
	lily/include/gregorian-ligature.hh, ly/gregorian-init.ly,
	mf/parmesan-heads.mf: various semivocalis related bugfixes

	* input/bugs/ligatures.ly: new file demonstrating problems with
	ligatures
	
2003-05-21  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el,
	lilypond-font-lock.el,
	lilypond-indent.el: Move all paren matching to lilypond-indent.el.

2003-05-20  Heikki Junes  <hjunes@cc.hut.fi>
